--- a/index.html
+++ b/index.html
@@ -13,23 +13,6 @@
         <div class="settings__menu">
             <ul class="settings__list">
               <li class="settings__item">
-                <h3>Auto Log-in:</h3>
-                <h3 class="active settings__auto__on settings__auto">ON</h3>
-                <h3 class="settings__auto__off settings__auto">OFF</h3>
-              </li>
-              <li class="settings__item">
-                <div class="settings__username">
-                  <h3 class="settings__username__title">Username: </h3>
-                  <input class="settings__username__input">
-                </div>
-              </li>
-              <li class="settings__item">
-                <div class="settings__password">
-                  <h3 class="settings__password__title">Password: </h3>
-                  <input class="settings__password__input">
-                </div>
-              </li>
-              <li class="settings__item">
                 <h3>Display Mode:</h3>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="settings__sun active">
                   <path d="M12 2.25a.75.75 0 0 1 .75.75v2.25a.75.75 0 0 1-1.5 0V3a.75.75 0 0 1 .75-.75ZM7.5 12a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM18.894 6.166a.75.75 0 0 0-1.06-1.06l-1.591 1.59a.75.75 0 1 0 1.06 1.061l1.591-1.59ZM21.75 12a.75.75 0 0 1-.75.75h-2.25a.75.75 0 0 1 0-1.5H21a.75.75 0 0 1 .75.75ZM17.834 18.894a.75.75 0 0 0 1.06-1.06l-1.59-1.591a.75.75 0 1 0-1.061 1.06l1.59 1.591ZM12 18a.75.75 0 0 1 .75.75V21a.75.75 0 0 1-1.5 0v-2.25A.75.75 0 0 1 12 18ZM7.758 17.303a.75.75 0 0 0-1.061-1.06l-1.591 1.59a.75.75 0 0 0 1.06 1.061l1.591-1.59ZM6 12a.75.75 0 0 1-.75.75H3a.75.75 0 0 1 0-1.5h2.25A.75.75 0 0 1 6 12ZM6.697 7.757a.75.75 0 0 0 1.06-1.06l-1.59-1.591a.75.75 0 0 0-1.061 1.06l1.59 1.591Z" />
@@ -37,6 +20,23 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="settings__moon">
                   <path fill-rule="evenodd" d="M9.528 1.718a.75.75 0 0 1 .162.819A8.97 8.97 0 0 0 9 6a9 9 0 0 0 9 9 8.97 8.97 0 0 0 3.463-.69.75.75 0 0 1 .981.98 10.503 10.503 0 0 1-9.694 6.46c-5.799 0-10.5-4.7-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 0 1 .818.162Z" clip-rule="evenodd" />
                 </svg>
+              </li>
+              <li class="settings__item">
+                <h3>Auto Log-in:</h3>
+                <h3 class="active settings__auto__on settings__auto">ON</h3>
+                <h3 class="settings__auto__off settings__auto">OFF</h3>
+              </li>
+              <li class="settings__item">
+                <div class="settings__username">
+                  <h3 class="settings__username__title">Username: </h3>
+                  <input class="settings__username__input" spellcheck="false">
+                </div>
+              </li>
+              <li class="settings__item">
+                <div class="settings__password">
+                  <h3 class="settings__password__title">Password: </h3>
+                  <input class="settings__password__input" type="password" spellcheck="false">
+                </div>
               </li>
               
             </ul>
